--- a/mac/shop/templates/shop/index.html
+++ b/mac/shop/templates/shop/index.html
@@ -48,11 +48,11 @@ padding-left: 0,
 padding-right: 0;
 }
 .card-deck {
-  background-color:#312338;
+  background-color:#d3d3d3;
   margin:0px;
 }
 .card-deck h1{
-  margin: 20px 40% 55px 40%;
+ margin-left: 40%;
   color: white;
 }
 #card1{
@@ -122,41 +122,6 @@ padding-right: 0;
     {% endfor %}
 
   </div>  
-      <div class="card-deck">
-        <h1>My Group Name</h1>
-        <div class="card-deck">
-        <div class="card" id="card1">
-          <img class="card-img-top rounded-circle" src="https://instagram.fdel27-2.fna.fbcdn.net/v/t51.2885-15/e35/121602186_675954066381101_8155629456295413460_n.jpg?_nc_ht=instagram.fdel27-2.fna.fbcdn.net&_nc_cat=105&_nc_ohc=q0ZMeywzQx8AX9TehkY&tp=1&oh=f61549e79964d1ac5dc8a38b1dd43f56&oe=60434194" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Sandip Kushwaha</h5>
-            <p class="card-text">Hello Everyone this is sandeep kushwaha. Computer science undergraduate from Dr A.P.J Abdul Kalam
-            kalam Technical university, Lucknow. I am working on my final year project BroBasket</p>
-          </div>
-        </div>
-        <div class="card" id="card1">
-          <img class="card-img-top" src="/media/shop/images/123.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Uday Pratap Yadaw</h5>
-            <p class="card-text">Hello Everyone this is uday. Computer science undergraduate from Dr A.P.J Abdul Kalam
-             Technical university, Lucknow. I am working on my final year project BroBasket</p>
-          </div>
-        </div>
-        <div class="card" id="card1">
-          <img class="card-img-top" src="/media/shop/images/123.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Sandip Kushwaha</h5>
-            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, aspernatur soluta totam tenetur, eum repellendus labore fugiat minima porro sit ab, fugit explicabo odio? Sequi!</p>
-          </div>
-        </div>
-          <div class="card" id="card1">
-          <img class="card-img-top" src="/media/shop/images/123.png" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Sandip Kushwaha</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-          </div>
-        </div>
-        </div>
-      </div>
 
   <footer class="bg-dark text-center text-lg-start">
       <!-- Copyright -->
