contact  section complete

--- a/mac/blog/templates/blog/index.html
+++ b/mac/blog/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% extends 'blog/basic.html' %}
 {% block css %}
 body{
-  background-color:darkgrey;
+  background-color:#fff;
 }
 {% endblock %}
 
