--- a/mac/shop/templates/shop/contact.html
+++ b/mac/shop/templates/shop/contact.html
@@ -2,24 +2,24 @@
 {% block title %}Contact Us{% endblock%}
 {% block css %}
 body{
-    background-color:grey;
+    background-color:#fff;
 }
 #cont{
-    background-color: lightblue;
-    max-width: 700px;
-    margin-top:50px;
-    border-radius:20px;
+    background-color: #d3d3d3;
+    max-width: 450px;
+    margin-top:25px;
+    border-radius:0px;
 }
 #contbtn{
     margin-bottom: 15px;
-    margin-left: 40%;
+    margin-left: 37%;
     width: 130px;
 }
 
 {% endblock %}
 {% block body %}
 <div id="cont" class="container">
-    <h3>Contact Us </h3> 
+    <h3 class="text-center" style="padding: 20px"> How can I help you</h3>
     <form action="/shop/contact/" method="post"> {% csrf_token %}
         <div class="form-group">
           <label for="name">Your Name</label>
