Modify all section

--- a/mac/shop/templates/shop/index.html
+++ b/mac/shop/templates/shop/index.html
@@ -2,7 +2,7 @@
 {% block title %}My Awesome Cart{% endblock %}
 {% block css %}
 body{
-background-color:#f6c5b2;
+background-color:#fff;
 }
 .col-md-3
 {
@@ -11,7 +11,7 @@ margin-left:-4px;
 }
 
 .carousel-indicators .active {
-background-color: red;
+background-color: gyay;
 }
 
 .col-md-3 img{
@@ -30,12 +30,12 @@ bottom: -36px;
   display: grid;
   margin-right: -53px;
   margin-left: -60px;
-  background-color: #3fcc5e;
+  background-color: #fff;
 }
 
 body .carousel-control-prev-icon,
 body .carousel-control-next-icon{
-background-color: blue;
+background-color: transparent;
 }
 .carousel-control-prev,
 .carousel-control-next{
