--- a/mac/shop/templates/shop/checkout.html
+++ b/mac/shop/templates/shop/checkout.html
@@ -6,7 +6,7 @@ body{
 }
 #chek{
     max-width: 726px;
-    background-color: #d3d3d3;
+    background-color: #fff;
     border-radius: 0px;
 }
 #submitbtn{
