--- a/mac/shop/templates/shop/contact.html
+++ b/mac/shop/templates/shop/contact.html
@@ -5,8 +5,8 @@ body{
     background-color:#fff;
 }
 #cont{
-    background-color: #d3d3d3;
-    max-width: 450px;
+    background-color: #fff;
+    max-width: 400px;
     margin-top:25px;
     border-radius:0px;
 }
