--- a/mac/shop/templates/shop/index.html
+++ b/mac/shop/templates/shop/index.html
@@ -35,7 +35,8 @@ bottom: -36px;
 
 body .carousel-control-prev-icon,
 body .carousel-control-next-icon{
-background-color: transparent;
+background-color: #b5b5b5;
+
 }
 .carousel-control-prev,
 .carousel-control-next{
