--- a/mac/blog/templates/blog/index.html
+++ b/mac/blog/templates/blog/index.html
@@ -1,4 +1,5 @@
 {% extends 'blog/basic.html' %}
+{% block title %} My BroBasket Blog {% endblock%}
 {% block css %}
 body{
   background-color:#fff;
