--- a/mac/shop/templates/shop/checkout.html
+++ b/mac/shop/templates/shop/checkout.html
@@ -1,5 +1,5 @@
 {% extends 'shop/basic.html' %}
-{% block title%} Checkout - My Awesome Cart{% endblock %}
+{% block title%} Checkout - My BroBasket{% endblock %}
 {% block css %}
 body{
     background-color:#fff;
