--- a/mac/blog/templates/blog/blogpost.html
+++ b/mac/blog/templates/blog/blogpost.html
@@ -1,5 +1,5 @@
 {% extends 'blog/basic.html' %}
-
+{% block title %} My BroBasket Blog {% endblock%}
 {% block body %}
 <div class="container">
     <div class="row mt-3">
